@@ -68,6 +68,7 @@ https://github.com/networkupstools/nut/milestone/12
      this case they would be comma-separated in the environment variable
      values. [issue #3092, PR #3097]
    * Introduced support for `DEBUG_MIN` setting via `upssched.conf`. [#3097]
+   * Introduced `upssched -l` mode to list currently tracked timers. [#3097]
 
  - `configure` script options:
    * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
